[gd_scene load_steps=5 format=3 uid="uid://ht7atlg3hyeo"]

[ext_resource type="Script" path="res://Scenes/Game.gd" id="1_mht0p"]
[ext_resource type="PackedScene" uid="uid://bnuyb0p8l4syw" path="res://Scenes/Die.tscn" id="2_a2hh2"]
[ext_resource type="Theme" uid="uid://8bcavu88mft3" path="res://Themes/MainTheme.tres" id="4_2o0ol"]
[ext_resource type="PackedScene" uid="uid://dj0uen5t451qt" path="res://Scenes/UI/ScoreboardPanel.tscn" id="4_56du8"]

[node name="Node3D" type="Node3D"]
script = ExtResource("1_mht0p")

[node name="Die" parent="." groups=["dice"] instance=ExtResource("2_a2hh2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.85, 3.7, 4.5)

[node name="Die2" parent="." groups=["dice"] instance=ExtResource("2_a2hh2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.2, 2.6, 4.5)

[node name="Die3" parent="." groups=["dice"] instance=ExtResource("2_a2hh2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.6, 4.5)

[node name="Die4" parent="." groups=["dice"] instance=ExtResource("2_a2hh2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2, 2.6, 4.5)

[node name="Die5" parent="." groups=["dice"] instance=ExtResource("2_a2hh2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.85, 3.7, 4.5)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 6.7, 10.5)
current = true

[node name="EndRoundButton" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -344.0
offset_top = -208.0
offset_right = -29.0
offset_bottom = -112.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("4_2o0ol")
disabled = true
text = "End Round"

[node name="BackButton" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = -208.0
offset_right = 339.0
offset_bottom = -112.0
grow_vertical = 0
theme = ExtResource("4_2o0ol")
text = "Main Menu"

[node name="ScoreboardPanel" parent="." instance=ExtResource("4_56du8")]
anchors_preset = 12
anchor_top = 1.0
offset_top = -56.0
offset_bottom = 1801.0
grow_vertical = 0

[node name="LoadingScreen" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_2o0ol")
color = Color(0.152344, 0.152344, 0.152344, 1)

[node name="VBox" type="VBoxContainer" parent="LoadingScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -27.0
offset_right = 20.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="LoadingScreen/VBox"]
layout_mode = 2
text = "LOADING..."

[node name="ProgressBar" type="ProgressBar" parent="LoadingScreen/VBox"]
layout_mode = 2
max_value = 1.0

[connection signal="pressed" from="EndRoundButton" to="." method="_on_pressed_end_round_button"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
